# support-query-classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  design_doc.md  problem_brief.md  pyproject.toml
configs/cost/: 2026-05.yaml
infra/: apis.tf  artifact_registry.tf  backend.tf  bigquery.tf  iam.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
src/data/: banking77.py
src/evaluation/: adapters.py  cost.py  golden.py  metrics.py  run.py  serving_latency.py  thresholds.py  val.py
src/labeling/: analyze_errors.py  batch_label.py  client.py  labeler.py  prompt.py  taxonomy.py  validate_on_golden.py
src/pii/: __init__.py  interface.py  noop.py  regex_redactor.py
src/serving/: app.py  audit.py  inference.py
src/training/: baseline.py  calibration.py  data.py  distilbert.py  persistence.py
tests/: test_smoke.py
tests/data/: test_banking77.py
tests/evaluation/: test_adapters.py  test_cost.py  test_golden.py  test_metrics.py  test_run.py  test_serving_latency.py  test_thresholds.py
tests/labeling/: test_batch_label.py  test_client.py  test_labeler.py  test_prompt.py  test_taxonomy.py  test_validate_on_golden.py
tests/pii/: test_interface.py  test_regex_redactor.py
tests/serving/: test_app.py  test_audit.py  test_inference.py
tests/training/: test_baseline.py  test_calibration.py  test_data.py  test_distilbert.py  test_persistence.py
