[project]
name = "support-query-classifier"
version = "0.1.0"
description = "Intent classification via LLM distillation for customer support query routing"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
core = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
]
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
]
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "google-cloud-bigquery>=3.20",
]
labeling = [
    "google-genai>=0.3",
]
pipelines = [
    "kfp>=2.7",
    "google-cloud-aiplatform>=1.50",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.uv]
package = false
default-groups = ["core", "dev"]
