[project]
name = "support-query-classifier"
version = "0.1.0"
description = "Intent classification via LLM distillation for customer support query routing"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
core = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "accelerate>=1.1",
    "matplotlib>=3.8",
]
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "google-cloud-bigquery>=3.20",
    "google-cloud-storage>=2.10",
]
labeling = [
    "google-genai>=0.3",
    "google-cloud-storage>=2.10",
]
pipelines = [
    "kfp>=2.7",
    "google-cloud-aiplatform>=1.50",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.uv]
package = false
default-groups = ["core", "dev"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modernize syntax)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
# Taxonomy descriptions are data, not code — long single-line strings improve
# readability and diffability more than wrapping at 100 chars would.
"src/labeling/taxonomy.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "datasets.*",
    "sentence_transformers.*",
    "sklearn.*",
    "torch.*",
    "pandas.*",
    "kfp.*",
    "google.cloud.*",
    "google.genai.*",
    "google.api_core.*",
    "vertexai.*",
    "fastapi.*",
    "uvicorn.*",
    "google.genai.*",
    "scipy.*",
    "joblib.*",
    "matplotlib.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing -q"
